--- a/styles/Component Styles/Footer.module.css
+++ b/styles/Component Styles/Footer.module.css
@@ -6,22 +6,7 @@
   align-items: center;
   justify-content: center;
   height: 10rem;
-  background-image: linear-gradient(135deg, #f97794 10%, #623aa2 100%);
-
-}
-
-.footerContent:before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  border-top: 1px solid rgba(255, 255, 255, 0.2);
-  background: rgba(255, 255, 255, 0.06);
-  -webkit-backdrop-filter: blur(5px);
-  backdrop-filter: blur(5px);
-  z-index: -1;
+  background-image: linear-gradient(135deg, #003594 10%, #869397 100%);
 }
 
 .iconContainer {
@@ -46,6 +31,7 @@
   margin: 20px;
   overflow: hidden;
   display: flex;
+  position: relative;
 }
 
 .glassIconContainer,
@@ -82,4 +68,5 @@
   font-size: 3rem;
   align-self: center;
   color: white;
+  align-self: center;
 }
