--- a/styles/Component Styles/NavBar.module.css
+++ b/styles/Component Styles/NavBar.module.css
@@ -5,7 +5,6 @@
   display: flex;
   height: 5rem;
   max-height: fit-content;
-  width: 100%;
   align-items: center;
   justify-content: space-between;
   padding: 0 1rem 0 1rem;
@@ -21,6 +20,7 @@
 
 .home, .fruityShooty, .runs{
   color: aliceblue;
+  text-decoration: none;
 }
 
 .fruityShooty, .runs{
