--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,23 @@
-.body {
+html,
+body {
   margin: 0;
   padding: 0;
-  background-color: black;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+  z-index: 9999;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: lightgray;
+  border-radius: 12px;
+  border: 3px solid #ffffff;
 }
