--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -2,6 +2,11 @@
   margin: 0;
   padding: 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
+.cards{
+  display: flex;
+}
