--- a/styles/Page Component Styles/Divider.module.css
+++ b/styles/Page Component Styles/Divider.module.css
@@ -1,7 +1,14 @@
-.divider{
-  width: 25vw;
+.secondaryHeader {
+  color: #fff;
+  font-weight: 400;
+  margin-bottom: 0;
+}
+
+.divider {
+  width: 35vw;
   border: 1px solid lightgray;
   border-right-color: rgba(255, 255, 255, 0.1);
   border-bottom-color: rgba(255, 255, 255, 0.1);
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
 }
