--- a/styles/Page Styles/Index.module.css
+++ b/styles/Page Styles/Index.module.css
@@ -8,9 +8,48 @@
 }
 
 .header {
+  font-size: 5vw;
+  font-weight: 400;
   color: #fff;
+  transition: 200ms;
+  margin: 10px 0 10px 0;
 }
 
-.cards {
+.header:hover {}
+
+.buttonWrapper {
+  border-radius: 5px;
   display: flex;
+  border: 1px solid lightgray;
+  background: rgba(255, 255, 255, 0.05);
+  border-right-color: rgba(255, 255, 255, 0.1);
+  border-bottom-color: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  transition: 200ms;
+}
+
+.button {
+  margin: 0;
+  padding: 5px;
+  color: #fff;
+  transition: 200ms;
+}
+
+.buttonWrapper:hover {
+  transform: scale(1.05);
+  box-shadow: 0 20px 30px rgba(0, 0, 255, 0.2);
+}
+
+.cards,
+.skillCards {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+@media(max-width: 768px) {
+  .cards {
+    flex-direction: column;
+  }
 }
