--- a/styles/Page Component Styles/SkillCardSkill.module.css
+++ b/styles/Page Component Styles/SkillCardSkill.module.css
@@ -2,7 +2,6 @@
   width: 250px;
   border-radius: 5px;
   display: flex;
-  border: 1px solid lightgray;
   background: rgba(255, 255, 255, 0.05);
   border-right-color: rgba(255, 255, 255, 0.1);
   border-bottom-color: rgba(255, 255, 255, 0.1);
@@ -17,6 +16,8 @@
 .container:hover {
   transform: scale(1.05);
   box-shadow: 0 20px 30px rgba(0, 0, 255, 0.2);
+  border: 1px solid lightgray;
+  position: relative;
 }
 
 .content {
