--- a/styles/Layout Component Styles/NavBar.module.css
+++ b/styles/Layout Component Styles/NavBar.module.css
@@ -1,7 +1,5 @@
 .FirstNav{
-  position: sticky;
   top: 0;
-  z-index: 50;
   display: flex;
   height: 5rem;
   max-height: fit-content;
@@ -20,6 +18,15 @@
 .home, .fruityShooty, .runs{
   color: aliceblue;
   text-decoration: none;
-  border: 1px solid red;
   padding: 10px;
+}
+
+@media(max-width: 428px){
+  .FirstNav{
+    padding: 0;
+  }
+  
+  .secondNavBar{
+    gap: 0;
+  }
 }
