--- a/styles/Page Styles/Index.module.css
+++ b/styles/Page Styles/Index.module.css
@@ -17,6 +17,13 @@
 
 .header:hover {}
 
+.welcoming {
+  color: #fff;
+  text-align: center;
+  max-width: 700px;
+  margin: 0 5px 0 5px;
+}
+
 
 .cards,
 .skillCards {
@@ -32,5 +39,11 @@
 
   .skillCards {
     flex-direction: column;
+  }
+}
+
+@media(max-width: 428px){
+  .welcoming{
+    font-size: 12px;
   }
 }
