--- a/styles/Page Component Styles/Index Styles/GlassModalForm.module.css
+++ b/styles/Page Component Styles/Index Styles/GlassModalForm.module.css
@@ -24,7 +24,7 @@
 
 .modalContainer {
   width: 300px;
-  height: 650px;
+  height: fit-content;
   border-radius: 12px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   display: flex;
@@ -64,4 +64,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media(max-width: 320px){
+  .modalContainer{
+    transform: scale(0.9);
+  }
 }
