--- a/styles/Page Component Styles/Index Styles/GlassModalForm.module.css
+++ b/styles/Page Component Styles/Index Styles/GlassModalForm.module.css
@@ -30,6 +30,35 @@
   display: flex;
   flex-direction: column;
   padding: 25px;
+  animation: fade-in 0.3s ease-in-out;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -10px, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.modalContainerExit {
+  animation: fade-out 0.3s ease-in-out;
+}
+
+@keyframes fade-out {
+  from {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+
+  to {
+    opacity: 0;
+    transform: translate3d(0, -10px, 0);
+  }
 }
 
 .closeButton {
@@ -40,6 +69,12 @@
   border: none;
   background: none;
   font-size: 20px;
+  color: #fff;
+  transition: 200ms;
+}
+
+.closeButton button:hover {
+  transform: scale(1.1);
 }
 
 .modalHeader {
@@ -66,8 +101,8 @@
   align-items: center;
 }
 
-@media(max-width: 320px){
-  .modalContainer{
+@media(max-width: 320px) {
+  .modalContainer {
     transform: scale(0.9);
   }
 }
