--- a/styles/Page Component Styles/Button.module.css
+++ b/styles/Page Component Styles/Button.module.css
@@ -3,13 +3,15 @@
   border-bottom-color: rgba(255, 255, 255, 0.1);
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10px);
-  width: 100px;
+  width: fit-content;
+  padding: 0 25px 0 25px;
   height: 35px;
   border-radius: 5px;
   background: rgba(255, 255, 255, 0.05);
   border: none;
   color: #fff;
   font-weight: 600;
+  transition: 400ms;
 }
 
 .button:hover {
