--- a/styles/Page Component Styles/Graph.module.css
+++ b/styles/Page Component Styles/Graph.module.css
@@ -2,6 +2,7 @@
   background-color: lightgray;
   border-radius: 10px;
   min-width: 700px;
+  max-width: 700px;
   margin-top: 20px;
   padding: 10px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1), 0 20px 30px rgba(0, 0, 0, 0.1);
