--- a/styles/Page Styles/Runs.module.css
+++ b/styles/Page Styles/Runs.module.css
@@ -1,12 +1,26 @@
-.header{
+.header {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.graphContainer{
+.graphContainer {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+.graphRow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+@media(max-width: 1125px) {
+  .graphRow {
+    flex-direction: column;
+    gap: 0rem;
+  }
 }
