--- a/styles/Page Component Styles/Run Page Styles/Graph.module.css
+++ b/styles/Page Component Styles/Run Page Styles/Graph.module.css
@@ -7,6 +7,7 @@
   margin-top: 20px;
   padding: 10px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1), 0 20px 30px rgba(0, 0, 0, 0.1);
+  background: rgba(255, 255, 255, 0.05);
 }
 
 @media(max-width: 428px) {
